Handle public errors and internal errors
